--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,11 @@
     </properties>
     
     <dependencies>
+        <dependency>
+            <groupId>cz.tomasdvorak</groupId>
+            <artifactId>eet-client</artifactId>
+            <version>2.0.0</version>
+        </dependency>
         <!--
         <dependency>
             <groupId>net.sf.jasperreports</groupId>
